--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -60,7 +60,7 @@
                         <p><a href="#" th:href="@{#}">gondor</a></p>
                     </td>
                     <td>
-                        <p><code class="literal">@NotNice</code></p>
+                        <p><code class="literal">@AwesomeMofos</code></p>
                     </td>
                 </tr>
             </tbody>
